WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
270169
REGRESSION (
271515@main
): Bold and Italic keyboard bar button items in the UCB never update
https://bugs.webkit.org/show_bug.cgi?id=270169
Summary
REGRESSION (271515@main): Bold and Italic keyboard bar button items in the UC...
Wenson Hsieh
Reported
2024-02-27 09:35:26 PST
rdar://123328041
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-02-27 10:13:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25177
EWS
Comment 2
2024-02-27 12:09:29 PST
Committed
275396@main
(9e343906838f): <
https://commits.webkit.org/275396@main
> Reviewed commits have been landed. Closing PR #25177 and removing active labels.
Wenson Hsieh
Comment 3
2024-02-27 12:54:48 PST
Comment hidden (obsolete)
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/25186
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug