REGRESSION (271515@main): Bold and Italic keyboard bar button items in the UCB never update https://bugs.webkit.org/show_bug.cgi?id=270169 rdar://123328041

Reviewed by Tim Horton.

The changes in 271515@main were meant to merge functionality in both the public API delegate method
`-textStylingAtPosition:inDirection:` and the UIKit IPI `-fontForCaretSelection` into just the
public API. However, this removed logic for setting symbolic traits on the font descriptor (bold,
italic) with no replacement.

Fix this by reinstating this code, and augmenting an existing API test to exercise this logic.

Test: AutocorrectionTests.FontAtCaretWhenUsingUICTFontTextStyle

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView textStylingAtPosition:inDirection:]):
* Tools/TestWebKitAPI/Tests/ios/AutocorrectionTestsIOS.mm:
(-[UIFont _test_systemFontWithSize:traits:]):

Canonical link: https://commits.webkit.org/275396@main